<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home"
            android:title="@string/home" />
        <item
            android:id="@+id/nav_budget"
            android:icon="@drawable/ic_budget"
            android:title="@string/budget" />
        <item
            android:id="@+id/nav_income"
            android:icon="@drawable/ic_income"
            android:title="@string/income" />
        <item
            android:id="@+id/nav_expense"
            android:icon="@drawable/ic_expense"
            android:title="@string/expense" />
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_setting"
            android:title="@string/TextSetting" />
    </group>
    <item
        android:id="@+id/nav_logout"
        android:icon="@drawable/ic_logout"
        android:title="@string/logout" />


    <item android:title="Other">
        <menu>
            <item
                android:id="@+id/nav_contactUs"
                android:icon="@drawable/ic_menu_send"
                android:title="@string/contact" />
            <item
                android:id="@+id/nav_aboutUs"
                android:icon="@drawable/ic_menu_send"
                android:title="@string/about" />
            <item
                android:id="@+id/nav_rate"
                android:icon="@drawable/ic_menu_send"
                android:title="@string/rate" />
        </menu>
    </item>

</menu>
