<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg"
    tools:context=".ForgotPasswordActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:padding="10dp"
            android:text="@string/ForgotPass"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textSize="20dp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:padding="@dimen/activity_horizontal_margin"
            android:text="@string/FDec"
            android:textColor="@color/white"
            android:textSize="14dp" />

        <EditText
            android:id="@+id/editTextEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:hint="@string/EForgottext"
            android:inputType="textEmailAddress"
            android:maxLines="1"
            android:textColor="@color/white" />

        <Button
            android:id="@+id/buttonRestPassword"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:text="@string/BRestPass" />

        <!--<TextView
            android:id="@+id/textBack"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/TBack"
            android:textAlignment="center"
            android:textStyle="bold" />-->
    </LinearLayout>
</RelativeLayout>