<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="?attr/actionBarSize"
        android:orientation="vertical"
        android:paddingLeft="15dp"
        android:paddingRight="15dp"
        android:paddingTop="30dp">

        <TextView
            android:id="@+id/headerTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Enter Categories"
            android:textAlignment="center"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textColor="@color/colorAccent" />

        <EditText
            android:id="@+id/categoryName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:hint="@string/categoryName"
            android:maxLines="1"
            android:singleLine="true" />

        <EditText
            android:id="@+id/percentageName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:hint="@string/bamt"
            android:inputType="number"
            android:maxLines="1"
            android:singleLine="true" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/cancelBtn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="15dp"
                android:layout_marginTop="40dp"
                android:background="@color/colorAccent"
                android:text="@string/btncancel"
                android:textColor="@android:color/white" />


            <Button
                android:id="@+id/addBtn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="15dp"
                android:layout_marginTop="40dp"
                android:background="@color/colorAccent"
                android:text="@string/add"
                android:textColor="@android:color/white" />

        </LinearLayout>

    </LinearLayout>
</LinearLayout>